parsing XML input for undulator

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -126,6 +126,7 @@ if(BUILD_TESTS)
     target_link_libraries(teufel.undulator ${PROJECT_NAME}lib
                              ${HDF5_LIBRARIES}
                              ${SDDS_LIBRARIES}
+                             ${PUGIXML_LIBRARIES}
                              ${ZLIB_LIBRARY_RELEASE} )
     add_executable(teufel.loop ${PROJECT_TESTS_DIR}/teufel.loop.cpp)
     target_link_libraries(teufel.loop ${PROJECT_NAME}lib
@@ -148,6 +149,7 @@ if(BUILD_EXAMPLES)
     target_link_libraries(elbe-u300 ${PROJECT_NAME}lib
                              ${HDF5_LIBRARIES}
                              ${SDDS_LIBRARIES}
+                             ${PUGIXML_LIBRARIES}
                              ${ZLIB_LIBRARY_RELEASE} )
                              
     add_executable(mpi_example ${PROJECT_EXAMPLES_DIR}/mpi_example.cpp)
@@ -159,6 +161,7 @@ if(BUILD_EXAMPLES)
                              ${HDF5_LIBRARIES}
                              ${SDDS_LIBRARIES}
                              ${MPI_CXX_LIBRARIES}
+                             ${PUGIXML_LIBRARIES}
                              ${ZLIB_LIBRARY_RELEASE} )
 
     add_executable(single_electron ${PROJECT_EXAMPLES_DIR}/single_electron_wiggler.cpp)
@@ -170,6 +173,7 @@ if(BUILD_EXAMPLES)
                              ${HDF5_LIBRARIES}
                              ${SDDS_LIBRARIES}
                              ${MPI_CXX_LIBRARIES}
+                             ${PUGIXML_LIBRARIES}
                              ${ZLIB_LIBRARY_RELEASE} )
 endif()
 
